@@ -1,3 +1,8 @@
+2012-10-22  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/bits/fcntl-linux.h (O_RSYNC): Define to
+	__O_RSYNC if it exists, otherwise to O_SYNC.
+
 2012-10-22  Jim Blandy  <jimb@codesourcery.com>
 	    Joseph Myers  <joseph@codesourcery.com>
 
